--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -L app.js",
+    "start:dev": "env-cmd -f .env.dev nodemon -L app.js",
+    "start:uat": "env-cmd -f .env.uat nodemon -L app.js",
+    "start:prod": "env-cmd -f .env.prod nodemon -L app.js",
     "test": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "luxon": "^3.4.3",
     "mysql2": "^3.6.1",
